--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "next": "14.2.4",
+    "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
