--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.50.1",
     "axios": "^1.7.2",
+    "caro-kann": "^1.0.11",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-cookies": "^2.0.3",
