--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.50.1",
+    "@uiw/react-markdown-editor": "^6.1.2",
     "axios": "^1.7.2",
     "caro-kann": "^1.0.11",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-cookies": "^2.0.3",
+    "next-remove-imports": "^1.0.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
