--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.51.21",
     "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.7.2",
     "caro-kann": "^1.0.11",
@@ -21,8 +22,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.4",
-    "sicilian": "^1.1.9"
+    "sicilian": "^1.1.9",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.6",
