--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "next-remove-imports": "^1.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-toastify": "^10.0.5",
     "sharp": "^0.33.4",
     "sicilian": "^1.1.9",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
