--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
+    "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
     "sicilian": "^1.1.10",
+    "slick-carousel": "^1.8.1",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
