--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: 🚀 Deploy to EC2 with CodeDeploy
         run: aws deploy create-deployment
-          --application-name onef_backend_deploy
+          --application-name onef_frontend_deploy
           --deployment-config-name CodeDeployDefault.AllAtOnce
           --deployment-group-name ${{ env.DEPLOYMENT_GROUP_NAME }}
           --s3-location bucket=${{ env.S3_BUCKET_NAME }},bundleType=zip,key=$GITHUB_SHA.zip
