--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "typescript": "^5"
   }
 }
