--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "plugins": ["prettier"],
   "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
   "rules": {
+    "react/display-name": "off",
     "prettier/prettier": [
       "error",
       {
