--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "caro-kann": "^1.0.11",
     "clsx": "^2.1.1",
+    "es-hangul": "^2.1.0",
     "next": "14.2.3",
     "next-cookies": "^2.0.3",
     "next-remove-imports": "^1.0.12",
@@ -28,6 +29,7 @@
     "sharp": "^0.33.4",
     "sicilian": "^2.0.6",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
