--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "caro-kann": "^1.0.11",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "es-hangul": "^2.1.0",
     "next": "14.2.3",
     "next-cookies": "^2.0.3",
