--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/typescript": "^4.1.1",
+    "@graphql-codegen/typescript-operations": "^4.3.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-devtools": "^5.51.21",
@@ -18,6 +23,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.1.0",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
+    "graphql-tag": "^2.12.6",
     "next": "14.2.3",
     "next-cookies": "^2.0.3",
     "next-remove-imports": "^1.0.12",
