--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "es-hangul": "^2.1.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "next-cookies": "^2.0.3",
     "next-remove-imports": "^1.0.12",
     "react": "^18.2.0",
