--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.7.7",
     "caro-kann": "^1.0.11",
-    "sicilian": "^2.1.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.1.0",
@@ -23,31 +22,32 @@
     "next": "^15.0.3",
     "next-cookies": "^2.0.3",
     "next-remove-imports": "^1.0.12",
-    "sharp": "^0.33.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.4",
+    "sicilian": "^2.1.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/typescript": "^4.1.1",
+    "@graphql-codegen/typescript-operations": "^4.3.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@tanstack/react-query-devtools": "^5.51.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
-    "@tanstack/react-query-devtools": "^5.51.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "typescript": "^5",
-    "@graphql-codegen/cli": "^5.0.3",
-    "@graphql-codegen/typescript": "^4.1.1",
-    "@graphql-codegen/typescript-operations": "^4.3.1",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.2"
+    "typescript": "^5"
   }
 }
