--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-query": "^5.50.1",
     "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.7.7",
-    "caro-kann": "^2.1.4",
+    "caro-kann": "^2.1.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.1.0",
@@ -31,8 +31,7 @@
     "sharp": "^0.33.4",
     "sicilian": "^2.1.3",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.8.1",
-    "usehooks-ts": "^3.1.0"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
