--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-query": "^5.50.1",
     "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.7.7",
-    "caro-kann": "^2.2.1",
+    "caro-kann": "^3.0.8",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "es-hangul": "^2.1.0",
@@ -29,7 +29,7 @@
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
-    "sicilian": "^2.1.7",
+    "sicilian": "^3.0.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "utilinent": "^0.0.4"
@@ -44,10 +44,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "typescript": "^5"
   }
 }
