--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,15 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
             cd /home/ec2-user
-            docker compose pull
+            # 먼저 실행 중인 컨테이너 중지
             docker compose down
+            # 모든 Docker 이미지 강제 삭제
+            docker rmi $(docker images -q) -f
+            # 미사용 리소스 정리
+            docker system prune -a -f --volumes
+            # ECR 로그인
+            aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
+            # 이미지 새로 받고 실행
+            docker compose pull
             docker compose up -d
