--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
     "sicilian": "^3.0.7",
-    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.6",
     "utilinent": "^0.0.4"
   },
   "devDependencies": {
